# OpenJob

./: .gitignore  CLAUDE.md  README.md  linkedin.md
oj_backend/: main.py  pyproject.toml  requirements.txt  schemas.py  system_prompt.py  utils.py
oj_backend/fine-tune/: add_entry.py  fine-tune_dataset.json  migrate_input_format.py  old_tuning.ipynb  test_dataset.json  train_dataset.json  tuning.ipynb
oj_backend/fine-tune/performance/: performance_open-jobs_gguf_model_20260316_154005.json  performance_open-jobs_gguf_model_20260317_145912.json  performance_open-jobs_gguf_model_20260324_201055.json
oj_backend/prompts/: prompt_a.txt
oj_backend/services/: pdf_plumber.py  pymu_pdf.py
oj_frontend/: package-lock.json  package.json  tsconfig.json
oj_frontend/app/: globals.css  layout.tsx  page.tsx
oj_frontend/app/how-to-use/: page.tsx
oj_frontend/components/: BehindTheScencesCard.tsx  HowToUseCard.tsx  PageCard.tsx  cover-card.tsx  job-card.tsx  page-header.tsx  upload-card.tsx
oj_frontend/components/analyse-card/: index.tsx
oj_frontend/components/analyse-page/: index.tsx
oj_frontend/components/header/: HeaderSection.tsx
oj_frontend/components/header-page/: index.tsx
oj_frontend/components/layout/: Footer.tsx  PageCard.tsx
oj_frontend/components/results/: AnalyzingSection.tsx  CoverLetterCard.tsx  ResultsSection.tsx  ScoreCard.tsx  SkillsAnalysisCard.tsx
oj_frontend/components/score-card/: index.tsx
oj_frontend/components/score-page/: ScoreChart.tsx  index.tsx
oj_frontend/components/ui/: navigation-menu.tsx
(+9 files in other folders)
